Name:                bloge
Version:             0.1
Synopsis:            Semistatic Markdown-based blog
Description:         Semistatic Markdown-based blog
License:             MIT
Author:              Erin Call
Maintainer:          hello@erincall.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Flag old-base
  default: False
  manual: False

Executable bloge
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    blaze-html                >= 0.7,
    blaze-markup              >= 0.6,
    bytestring                >= 0.9.1,
                              -- Careful! This will fetch containers-0.4 on production and -0.5 in dev!
    containers                >= 0.4     && < 0.6,
    data-default              >= 0.5     && < 0.6,
    filemanip                 >= 0.3     && < 0.4,
    hashmap                   >= 1.3     && < 1.4,
    heist,
    iso8601-time              >= 0.1.2,
    List                      >= 0.5     && < 0.6,
    markdown                  >= 0.1.7   && < 0.2,
    MissingH                  >= 1.2     && < 2,
    MonadCatchIO-transformers >= 0.2.1   && < 0.4,
    mtl,
    old-locale                >= 1,
    parsec                    >= 3       && < 4,
    snap == 0.14.0.5,
    snap-core,
    snap-server,
    snap-loader-static,
    text,
    time,
    transformers              >= 0.3,
    xmlhtml                   >= 0.1,
    base                      >= 4.4,
    lens                      >= 3.7.6

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
