Name:                test-bloge
Version:             0.1
Synopsis:            Tests for bloge
Description:         Wow
License:             MIT
Author:              Andrew Lorente
Maintainer:          hello@andrewlorente.com
Stability:           Experimental
Category:            Tests
Build-type:          Simple
Cabal-version:       >=1.2

Executable test-bloge
  main-is: Test.hs
  hs-source-dirs: ., ../src

  ghc-options: -Wall -fno-warn-orphans -fno-warn-unused-do-bind -O0

  Build-depends:
    base,
    blaze-html,
    bytestring,
    containers,
    data-default,
    hashmap,
    iso8601-time,
    markdown,
    parsec,
    old-locale,
    text,
    time,
    transformers,
    unordered-containers,

    HUnit,
    test-framework-quickcheck2,
    test-framework-hunit,
    test-framework,
    QuickCheck
